Ticket #556 (closed defect: fixed)

Opened 3 years ago

Last modified 3 years ago

Locale problem for help.

Reported by: xtophe Assigned to: courmisch
Priority: normal Milestone: 0.8.5-final
Component: Version: master
Severity: normal Keywords:
Cc: Platform(s): all
Difficulty: unknown Work status: Not started

Description

thresh reports on IRC that the output of vlc --help is in UTF8 even if his locales are set to ru_RU.KOI8-R.

Missing ToLocale?() in the Help() function ?

Change History

21/02/06 12:36:35 changed by courmisch

  • status changed from new to assigned.
  • owner set to courmisch.

21/02/06 12:53:50 changed by courmisch

(In [14441]) A few utf8 *printf wrappers (refs #556)

21/02/06 13:13:59 changed by courmisch

  • status changed from assigned to closed.
  • resolution set to fixed.

(In [14444]) Convert to local encoding before printing on console (closes #556)