A few utf8 *printf wrappers (refs #556)